<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".presentations.ui.activities.SignUpActivity">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/main_screen_background" />


        <LinearLayout
            android:id="@+id/midLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/_12ssp"
            android:background="@drawable/cornor_radius"
            android:orientation="vertical"
            android:padding="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8ssp"
                android:fontFamily="@font/alfa_slab_one"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3ssp"
                android:layout_marginEnd="@dimen/_3ssp"
                android:hint="@string/user_name"
                android:padding="@dimen/_5ssp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTxtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3ssp"
                android:layout_marginEnd="@dimen/_3ssp"
                android:hint="@string/enter_email"
                android:padding="@dimen/_5ssp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTxtUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3ssp"
                android:layout_marginEnd="@dimen/_3ssp"
                android:hint="@string/enter_phoneno"
                android:padding="@dimen/_5ssp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTxtUserPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="11"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3ssp"
                android:layout_marginEnd="@dimen/_3ssp"
                android:hint="@string/enter_password"
                android:padding="@dimen/_5ssp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTxtUserPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3ssp"
                android:layout_marginEnd="@dimen/_3ssp"
                android:hint="@string/confirm_password"
                android:padding="@dimen/_5ssp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTxtUserPasswordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnPlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/midLayout"
                android:layout_marginStart="@dimen/_8ssp"
                android:layout_marginTop="@dimen/_20ssp"
                android:layout_marginEnd="@dimen/_8ssp"
                android:background="@drawable/rounded_background_orange"
                android:fontFamily="@font/alfa_slab_one"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/logoImage"
            android:layout_width="@dimen/_60ssp"
            android:layout_height="@dimen/_60ssp"
            android:layout_margin="@dimen/_10ssp"
            android:background="@drawable/circle_dot_orange"
            android:backgroundTint="@color/yellow"
            android:contentDescription="@string/todo"
            android:padding="@dimen/_5ssp"
            android:src="@drawable/dinosaur_avatar"
            app:layout_constraintBottom_toTopOf="@id/midLayout"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:padding="@dimen/_1ssp"
            android:text="@string/already_user"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/loginTxtText" />

        <TextView
            android:id="@+id/loginTxtText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:padding="@dimen/_1ssp"
            android:text="@string/login"
            android:textColor="@color/yellow"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <include
            android:id="@+id/isLoading"
            layout="@layout/progress_bar_custom_layout"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>