<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".presentations.ui.activities.UpdateProfileActivity">

        <RelativeLayout
            android:id="@+id/toolbarCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5ssp"
            android:background="@drawable/cornor_radius"
            android:gravity="center"
            android:padding="@dimen/_8ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/Logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_arrow_back_white"
                app:tint="@color/white" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Update Profile"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10ssp"
            android:layout_marginTop="@dimen/_20ssp"
            android:layout_marginEnd="@dimen/_10ssp"
            android:background="@drawable/cornor_radius"
            android:orientation="vertical"
            android:padding="@dimen/_12ssp"
            app:layout_constraintEnd_toStartOf="@+id/toolbarCustom"
            app:layout_constraintStart_toEndOf="@+id/toolbarCustom"
            app:layout_constraintTop_toBottomOf="@id/toolbarCustom">


            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/_50ssp"
                android:layout_height="@dimen/_50ssp"
                android:layout_margin="@dimen/_5ssp"
                android:background="@drawable/circle_dot_orange"
                android:backgroundTint="@color/yellow"
                android:padding="@dimen/_4ssp"
                android:src="@drawable/dinosaur_avatar" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3ssp"
                android:layout_marginEnd="@dimen/_3ssp"
                android:hint="@string/user_name"
                android:padding="@dimen/_5ssp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTxtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3ssp"
                android:layout_marginEnd="@dimen/_3ssp"
                android:hint="@string/enter_email"
                android:padding="@dimen/_5ssp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTxtUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3ssp"
                android:layout_marginEnd="@dimen/_3ssp"
                android:hint="@string/enter_phoneno"
                android:padding="@dimen/_5ssp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTxtUserPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3ssp"
                android:layout_marginEnd="@dimen/_3ssp"
                android:hint="@string/enter_password"
                android:padding="@dimen/_5ssp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTxtUserPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnSaveUpdate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35ssp"
                android:layout_marginStart="@dimen/_25ssp"
                android:layout_marginTop="@dimen/_25ssp"
                android:layout_marginEnd="@dimen/_25ssp"
                android:layout_marginBottom="@dimen/_10ssp"
                android:background="@drawable/rounded_background_orange"
                android:fontFamily="@font/alfa_slab_one"
                android:text="Save Update"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>